...
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>

    <android.support.design.widget.TabLayout
       android:id="@+id/tablayout"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="@color/myNewsBlue"
       app:tabTextColor="@color/myNewsWhite"
        app:tabSelectedTextColor="@color/myNewsWhite"
        app:tabMode="fixed"
...
       app:tabIndicatorColor="@color/myNewsYellow"
       >

   </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tablayout">

    </android.support.v4.view.ViewPager>

...
